# BidRadar-X

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  design-qa.md  package-lock.json  package.json  pyproject.toml  skills-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature-task.md  feature.yml
.github/workflows/: quality.yml
app/: globals.css  layout.tsx  page.tsx
app/components/: AppShell.tsx  InfoTip.tsx  WorkspaceSidebar.tsx
app/interfaces/: page.tsx
app/projects/: page.tsx
app/reports/: page.tsx
backend/: requirements.txt  run.py
backend/app/: __init__.py  main.py
backend/tests/: __init__.py  integration_support.py  test_ai_pipeline.py  test_api.py  test_attachment_archive.py  test_attachment_reveal_api.py  (+28 more)
docs/: AGENT_TASK_TEMPLATE.md  AI_PIPELINE.md  CONTRACTS.md  CONTRIBUTING.md  DATA_CONTRACT.md  FACT_CONSISTENCY_AND_TEST_ISOLATION.md  FEISHU_DELIVERY.md  GITHUB_WORKFLOW.md  IMPLEMENTATION.md  JUDGE_GUIDE.md  LOGIN_SOURCE_SETUP.md  PROJECT_CONTEXT.md  REPORT_FORMAT.md  ROADMAP.md  SCHEDULED_DELIVERY.md  SOURCE_CCGP.md  SOURCE_OFFICIAL_TENDER_RESEARCH.md  TEAM_HANDOFF.md  WORK_BREAKDOWN.md  WORK_PLAN.md
lib/: demo-tenders.ts  favorite-projects.ts  favorite-recommendations.ts  marked-projects.ts  mock-requirements-parser.ts  starred-subscriptions.ts  tender-api.ts
scripts/: build_application_docx.py  dev-local.mjs  start-backend-detached.ps1  start-dev-detached.ps1  start-frontend-detached.ps1
tests/: rendered-html.test.mjs  test_repository_baseline.py
tools/: build_demo_video.py
(+146 files in other folders)
